welcome.lessons.welcome.array.has271.Has271.scala.error
has271:6: error: not found: value abs
			if ((nums(i) == (nums(i+1)+5)) && abs(nums(i) - (nums (i+2)-1))<= 2) flag = true;
                                                          ^