welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
	var flag:Boolean=true;
	if (nums.length < 3) flag = false;
	else {
		for (i<- 0 to nums.length-3) {
			if ((nums(i) == (nums(i+1)+5)) && abs(nums(i) - (nums (i+2)-1))<= 2) flag = true;
			
		}
	}
	return flag;
}
